kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
  - name: http
    port: 80
    targetPort: 80
